# bevy_examples

./: Cargo.toml
examples/: animated_splash_screen.rs  check_asset_status.rs  main_menu.rs  splash_screen.rs
