[package]
name = "bevy_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.1", features = ["dynamic_linking"] }
bevy_asset_loader = "0.20.0"

[profile.dev]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=fuse-ld=/usr/bin/mold"]
